--- a/css/application2.css
+++ b/css/application2.css
@@ -15,6 +15,15 @@ div#header {
 footer {
 	margin-left:150px;
 }
+.footer {
+  margin-top: 45px;
+  padding: 35px 0 36px;
+  border-top: 1px solid #e5e5e5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #555;
+}
 div#content {
 	float:left;
 	background:#fff;
